# django-snacks

./: README.md  db.sqlite3  pyproject.toml
snacks/: tests.py  urls.py
snacks_project/: settings.py  urls.py
templates/: _base.html  about.html  home.html
